--- a/templates/supervisor/hbase.conf.j2
+++ b/templates/supervisor/hbase.conf.j2
@@ -9,6 +9,6 @@ startsecs=15
 startretries=9
 redirect_stderr=true
 
-stdout_logfile={{hbase_install_dir}}/logs/hbase.out
+stdout_logfile={{hbase_logs_dir}}/hbase.out
 stdout_logfile_maxbytes=20MB
 stdout_logfile_backups=10
